--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "node": ">=20 <21"
   },
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "dev:local": "PORT=3000 PY_PORT=5100 NODE_ENV=development tsx server/index.ts",
-    "dev:py5200": "PORT=3000 PY_PORT=5200 NODE_ENV=development tsx server/index.ts",
+    "dev": "PORT=3001 PY_PORT=5201 NODE_ENV=development tsx server/index.ts",
+    "dev:local": "PORT=3001 PY_PORT=5201 NODE_ENV=development tsx server/index.ts",
+    "dev:py5200": "PORT=3001 PY_PORT=5201 NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --target=node20 --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
@@ -70,6 +70,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
