fix: Railway com runtime.txt e Procfile simples

--- a/.railwayignore
+++ b/.railwayignore
@@ -1,8 +1,11 @@
-# Node
+# Ignorar frontend e build artifacts
 node_modules/
 dist/
 build/
 .next/
+client/
+server/
+.vercel/
 
 # Python
 .venv/
@@ -10,24 +13,8 @@ venv/
 __pycache__/
 *.pyc
 
-# Frontend (não deploy no Railway)
-client/
-server/
-
-# Vercel
-.vercel/
-
 # OS
 .DS_Store
 *.log
-
-# Environment
 .env
-.env.local
-
-# Misc
-*.bak
-.cursor/
-.vscode/
-.idea/
-
+.local
