--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:local": "PORT=5500 PY_PORT=5501 NODE_ENV=development tsx server/index.ts",
     "dev:py5200": "PORT=5500 PY_PORT=5501 NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --target=node20 --packages=external --bundle --format=esm --outdir=dist",
+    "build:railway": "echo 'Railway: Python-only deployment, skipping Node build' && exit 0",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
