fix: corrigir Vercel serverless function para proxy API
- Removido api/[...path].ts (não funcionava)
- Criado api/proxy.ts com formato correto @vercel/node
- Adicionado rewrites em vercel.json para /api/* → /api/proxy
- Resolve erro 404 ao acessar especialistas individuais

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,12 @@
   "outputDirectory": "dist/public",
   "installCommand": "npm install --include=dev",
   "framework": null,
-  "devCommand": "npm run dev"
+  "devCommand": "npm run dev",
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/proxy"
+    }
+  ]
 }
 
