--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,6 @@
   "outputDirectory": "dist/public",
   "installCommand": "npm install --include=dev",
   "framework": null,
-  "devCommand": "npm run dev",
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/api/proxy"
-    }
-  ]
+  "devCommand": "npm run dev"
 }
 
